update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Poems-of-evolution_74934
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74934-h/images/cover.jpg
 creator:
   author:
     agent_name: Smith, Langdon
@@ -19,6 +22,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/486
     wikipedia: https://en.wikipedia.org/wiki/E._Haldeman-Julius
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74934#Poems-of-evolution
 gutenberg_issued: '2024-12-19'
 gutenberg_type: Text
 identifiers:
